# empedokles

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  default.nix
assets/shaders/: diffuse.comp  falling_sand.comp  particle_update.comp  sprite.frag
cmake/: Install.cmake
demo/: main.cpp  protagonist.hpp
src/: CMakeLists.txt
src/audio/: sound_asset.cpp  sound_asset.hpp  sound_source.cpp  sound_source.hpp  sound_system.cpp  sound_system.hpp
src/compute/: compute_manager.cpp  compute_manager.hpp
src/compute/multithreading/: thread_pool.hpp
src/core/: asset_registry.hpp  component.hpp  component_array.hpp  component_manager.hpp  coordinator.cpp  coordinator.hpp  entity.hpp  entity_manager.cpp  entity_manager.hpp  layer.cpp  layer.hpp  system.hpp  system_base.hpp  system_manager.hpp
src/debug/: debug.hpp  log.cpp  log.hpp
src/graphics/: animated_sprite.cpp  animated_sprite.hpp  animated_sprite_system.cpp  animated_sprite_system.hpp  camera.cpp  camera.hpp  frame_info.hpp  model.cpp  model.hpp  model_system.cpp  model_system.hpp  particle_emit_queue.hpp  particle_system.cpp  particle_system.hpp  renderer.cpp  renderer.hpp  sprite.cpp  sprite.hpp  sprite_system.cpp  sprite_system.hpp  texture.cpp  texture.hpp  utils.hpp  vertex.cpp  vertex.hpp
src/graphics/imgui/: imgui_emp_impl.cpp  imgui_emp_impl.hpp
src/graphics/render_systems/: particle_render_system.cpp  particle_render_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/gui/: console.cpp  console.hpp  gui_manager.cpp  gui_manager.hpp  log_window.cpp  log_window.hpp  overlay.cpp  overlay.hpp  spatial_visualizer.cpp  spatial_visualizer.hpp
src/gui/editor/: inspector.hpp  tree-view.cpp  tree-view.hpp
src/io/: keyboard_controller.cpp  keyboard_controller.hpp  window.cpp  window.hpp
src/math/: geometry_func.cpp  geometry_func.hpp  math.hpp  math_defs.hpp  math_func.cpp  math_func.hpp  types.cpp  types.hpp
src/math/shapes/: AABB.hpp  circle.hpp  concave_polygon.hpp  convex_polygon.hpp  ray.hpp  triangle.hpp
src/memory/: allocator.hpp  linear_allocator.cpp  linear_allocator.hpp  parallel_iterator.hpp  pool_allocator.cpp  pool_allocator.hpp  relative_pointer.hpp
src/physics/: collider.cpp  collider.hpp  constraint.cpp  constraint.hpp  material.hpp  physics_system.cpp  physics_system.hpp  rigidbody.cpp  rigidbody.hpp
src/scene/: app.cpp  app.hpp  behaviour.hpp  compute_demo.hpp  hierarchy.hpp  register_scene_types.cpp  register_scene_types.hpp  renderer_context.hpp  scene_defs.hpp  transform.cpp  transform.hpp
src/templates/: common_concepts.hpp  disjoint_set.hpp  finite_state_machine.hpp  free_list.hpp  observer.hpp  quad_tree.hpp  relative_string.hpp  relative_vector.hpp  set.hpp  stack_linked_list.hpp  sweep_line.hpp  type_pack.hpp
src/utils/: RNG.hpp  nanobench.h  time.hpp
src/vulkan/: buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp
tests/: test.cpp
tests/core/: test_coordinator.cpp
tests/math/: test_geometry.cpp  test_math.cpp  test_transform.cpp
